  deleted on shared parameters. Thanks to Claudia Penaloza
  for reporting this issue. \item In
  \code{\link{process.data}} the restriction of having only
  one non-unobservable state for robust designs was removed
  but a note is still issued when this occurs. Also, a
  warning is issued if you specify more than one value in
  the vector for initial.ages but an age variable is not
  identified in the groups. \item An argument run was added
  to \code{\link{mark}} which if set to FALSE will not run
  the model after it is created. } Version 2.0.9 (1 Dec
  2011) \itemize{ \item Patch was made to
  \code{\link{make.mark.model}} to fix bug in PIM creation
  for a multi-session model and there was just 1 session.
  Thanks to Erin Roche for helping to identify this bug.
  \item Patch was made to \code{\link{make.mark.model}} to
  fix bug in handling of mlogits for pi and Omega
  parameters with more than one group. These parameters
  were introduced with the RDMSMisClass and other new
  models that were recently added. \item Additional changes
  were made to \code{\link{export.MARK}} to re-fix changes
  for robust and nest survival model export to MARK. \item
  A function \code{\link{mark.wrapper.parallel}} written by
  Eldar Rakimberdiev provides a parallel processing version
  of mark.wrapper.  See the example in the help for the
  function.  The parallel version is functionally the same
  and can be used in place of \code{mark.wrapper} to run
  sequentially or in parallel. It does not include the run
  argument however. \item A bug was fixed in
  \code{\link{get.real}} which caused an R error for a
  triangular PIM that had only a single entry. Thanks to
  Amanda Goldberg for discovering and reporting this error.
  } Version 2.0.8 (7 Oct 2011) \itemize{ \item Both
  \code{\link{setup.model}} and
  \code{\link{setup.parameters}} were re-written to use
  data files models.txt and parameters.txt to define models
  and parameters which should make it easier to add new